# gpa-rok

./: Cargo.toml  LICENSE  README.md  client_config.json  server_config.json
binaries/0.1.0/mac-arm/server/: composer.server.yml  server_config.json
binaries/0.2.0/mac-arm/client/: client_config.json
src/: client.rs  client_domain.rs  config_domain.rs  entities.rs  main.rs  server.rs  server_domain.rs
