[package]
name = "gpa-rok"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gpa-rok-client"
path = "src/client.rs"

[[bin]]
name = "gpa-rok-server"
path = "src/main.rs"

[dependencies]
env_logger = { version = "0.11.8" }
tokio = { version = "1.47.1", features = ["full"] }
log = { version = "0.4.28" }
tokio-tungstenite = "=0.27.0"
futures-util = "0.3.31"
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = { version = "1.0.143"  }
warp = { version = "0.4.2", features = ["server"] }
bytes = "1.10.1"

